# LangChain-study

./: .env.example  .gitignore  Makefile  env_utils.py  init_llm.py  my_llm.py  pyproject.toml
RAG/: 01.rag.py  02.textloader.py  03.pypdfloader.py  04.vector_memory.py  05.vector_db.py  06.vector_prompt.py  07.runnable_pass_through.py  test.txt
RAG_project/: app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  rag.py  vector_stores.py
agent_part/: 02.agent_dynamic_prompt.py  02.create_agent_dynamic.py
agent_rag_tool_project/: app.py  app2.py  架构.md  检索结果缺失分析报告.md
agent_rag_tool_project/agent/: react_agent.py
agent_rag_tool_project/chroma_db/: chunks.jsonl  mapping2.json
agent_rag_tool_project/config/: agent.yml  chroma.yml  prompts.yml  rag.yml
agent_rag_tool_project/data/: 测试.txt
agent_rag_tool_project/model/: factory.py
agent_rag_tool_project/prompts/: main_prompt.txt  query_rewrite.txt  rag_summarize.txt  report_prompt.txt
agent_rag_tool_project/rag/: bm25.py  hybrid_retrieval_service.py  parent_expander.py  query_planner.py  query_rewrite.py  rag_service.py  ranker.py  reference_formatter.py  vector_store.py
agent_rag_tool_project/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
memory_code/: 01.demo1.py  02.memory1.py  03.memory2.py  04.change_memory.py  05.context_summary.py  06.lang_memory.py  07.lang_memory_database.py
models/: 01_quick_start.py  02.invoke_llm.py  03.invoke_llm2.py
models/model_other/: 01.reasoning_model.py  02.rate_limit.py  (+1 more)
(+11 files in other folders)
